// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Toolbar instance with center justification 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  justify={2}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Toolbar"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Toolbar__ToolbarView
    className="ui-toolbar"
  >
    <Toolbar__ToolbarGroupView
      className="ui-toolbar-group"
      justify={2}
    >
      <Toolbar__ToolbarElementView
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "color": "#666666",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className="ui-toolbar-element"
          color={null}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="car"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#c0c0c0",
              "buttonColor": "#666666",
              "chevronColor": "#cccccc",
              "color": "#000000",
              "fontFamily": "OpenSans, Georgia, serif",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "headerHoverColor": "#ffe11a",
              "hoverColor": "#c0c0c0",
              "inputBorderColor": "#c0c0c0",
              "itemHoverColor": "#bedb39",
              "outlineColor": "#51cbee",
              "searchFocus": "#51cbee",
              "searchMatch": "#fd7400",
              "selectedBackgroundColor": "#1f8a70",
              "selectedForegroundColor": "#ffe11a",
              "titleBarBackgroundColor": "#004358",
              "titleBarForegroundColor": "#ffe11a",
              "tooltipBackgroundColor": "#708090",
              "tooltipForegroundColor": "#ffffff",
              "transitionDelay": "0.33s",
            }
          }
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </Toolbar__ToolbarElementView>
    </Toolbar__ToolbarGroupView>
  </Toolbar__ToolbarView>
</Wrapper>
`;

exports[`Test creation of a Toolbar instance with left justification 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  justify={0}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Toolbar"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Toolbar__ToolbarView
    className="ui-toolbar"
  >
    <Toolbar__ToolbarGroupView
      className="ui-toolbar-group"
      justify={0}
    >
      <Toolbar__ToolbarElementView
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "color": "#666666",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className="ui-toolbar-element"
          color={null}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="car"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#c0c0c0",
              "buttonColor": "#666666",
              "chevronColor": "#cccccc",
              "color": "#000000",
              "fontFamily": "OpenSans, Georgia, serif",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "headerHoverColor": "#ffe11a",
              "hoverColor": "#c0c0c0",
              "inputBorderColor": "#c0c0c0",
              "itemHoverColor": "#bedb39",
              "outlineColor": "#51cbee",
              "searchFocus": "#51cbee",
              "searchMatch": "#fd7400",
              "selectedBackgroundColor": "#1f8a70",
              "selectedForegroundColor": "#ffe11a",
              "titleBarBackgroundColor": "#004358",
              "titleBarForegroundColor": "#ffe11a",
              "tooltipBackgroundColor": "#708090",
              "tooltipForegroundColor": "#ffffff",
              "transitionDelay": "0.33s",
            }
          }
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </Toolbar__ToolbarElementView>
    </Toolbar__ToolbarGroupView>
  </Toolbar__ToolbarView>
</Wrapper>
`;

exports[`Test creation of a Toolbar instance with right justification 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  justify={1}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Toolbar"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="small"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Toolbar__ToolbarView
    className="ui-toolbar"
  >
    <Toolbar__ToolbarGroupView
      className="ui-toolbar-group"
      justify={1}
    >
      <Toolbar__ToolbarElementView
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "color": "#666666",
            "display": "flex",
            "height": "18px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className="ui-toolbar-element"
          color={null}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="car"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="small"
          style={Object {}}
          testing={true}
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#c0c0c0",
              "buttonColor": "#666666",
              "chevronColor": "#cccccc",
              "color": "#000000",
              "fontFamily": "OpenSans, Georgia, serif",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "headerHoverColor": "#ffe11a",
              "hoverColor": "#c0c0c0",
              "inputBorderColor": "#c0c0c0",
              "itemHoverColor": "#bedb39",
              "outlineColor": "#51cbee",
              "searchFocus": "#51cbee",
              "searchMatch": "#fd7400",
              "selectedBackgroundColor": "#1f8a70",
              "selectedForegroundColor": "#ffe11a",
              "titleBarBackgroundColor": "#004358",
              "titleBarForegroundColor": "#ffe11a",
              "tooltipBackgroundColor": "#708090",
              "tooltipForegroundColor": "#ffffff",
              "transitionDelay": "0.33s",
            }
          }
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </Toolbar__ToolbarElementView>
    </Toolbar__ToolbarGroupView>
  </Toolbar__ToolbarView>
</Wrapper>
`;

exports[`Test disabling of a Toolbar instance 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  justify={0}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Toolbar"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Toolbar__ToolbarView
    className="ui-toolbar nohover"
  >
    <Toolbar__ToolbarGroupView
      className="ui-toolbar-group"
      justify={0}
    >
      <Toolbar__ToolbarElementView
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "color": "#666666",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className="ui-toolbar-element"
          color={null}
          controlled={true}
          direction="right"
          disabled={true}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="car"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#c0c0c0",
              "buttonColor": "#666666",
              "chevronColor": "#cccccc",
              "color": "#000000",
              "fontFamily": "OpenSans, Georgia, serif",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "headerHoverColor": "#ffe11a",
              "hoverColor": "#c0c0c0",
              "inputBorderColor": "#c0c0c0",
              "itemHoverColor": "#bedb39",
              "outlineColor": "#51cbee",
              "searchFocus": "#51cbee",
              "searchMatch": "#fd7400",
              "selectedBackgroundColor": "#1f8a70",
              "selectedForegroundColor": "#ffe11a",
              "titleBarBackgroundColor": "#004358",
              "titleBarForegroundColor": "#ffe11a",
              "tooltipBackgroundColor": "#708090",
              "tooltipForegroundColor": "#ffffff",
              "transitionDelay": "0.33s",
            }
          }
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        />
      </Toolbar__ToolbarElementView>
    </Toolbar__ToolbarGroupView>
  </Toolbar__ToolbarView>
</Wrapper>
`;

exports[`Test making the Toolbar invisible 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  justify={0}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Toolbar"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <Toolbar__ToolbarView
    className="ui-toolbar"
  >
    <Toolbar__ToolbarGroupView
      className="ui-toolbar-group"
      justify={0}
    >
      <Toolbar__ToolbarElementView
        style={
          Object {
            "border": "solid 1px #c0c0c0",
            "color": "#666666",
            "display": "flex",
            "height": "24px",
            "margin": "0 2px",
          }
        }
      >
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className="ui-toolbar-element"
          color={null}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          iconName="car"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth={null}
          noborder={false}
          noedit={false}
          nohover={false}
          nopropagation={true}
          notheme={false}
          notooltip={false}
          onClick={[Function]}
          padding={null}
          ripple={true}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#c0c0c0",
              "buttonColor": "#666666",
              "chevronColor": "#cccccc",
              "color": "#000000",
              "fontFamily": "OpenSans, Georgia, serif",
              "headerBackgroundColor": "#004358",
              "headerForegroundColor": "#ffffff",
              "headerHoverColor": "#ffe11a",
              "hoverColor": "#c0c0c0",
              "inputBorderColor": "#c0c0c0",
              "itemHoverColor": "#bedb39",
              "outlineColor": "#51cbee",
              "searchFocus": "#51cbee",
              "searchMatch": "#fd7400",
              "selectedBackgroundColor": "#1f8a70",
              "selectedForegroundColor": "#ffe11a",
              "titleBarBackgroundColor": "#004358",
              "titleBarForegroundColor": "#ffe11a",
              "tooltipBackgroundColor": "#708090",
              "tooltipForegroundColor": "#ffffff",
              "transitionDelay": "0.33s",
            }
          }
          tooltip={null}
          top={null}
          visible={false}
          width={null}
          xcss={null}
        />
      </Toolbar__ToolbarElementView>
    </Toolbar__ToolbarGroupView>
  </Toolbar__ToolbarView>
</Wrapper>
`;
